--- a/Tabang-Hub/Tabang-Hub/Views/Page/Index.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Index.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h2>Volunteer Page</h2>
-    @if (Model.volunteersSkill.Count == 0)
+    @if (Model.volunteersSkills.Count == 0)
     {
 
         <div id="modal-overlay">
