--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/VolunteerProfile.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/VolunteerProfile.cshtml
@@ -81,7 +81,7 @@
                 <div class="col-md-5">
                     <h5>Skills</h5>
                     <div id="skillsDisplay">
-                        @foreach (var UserSkill in Model.volunteersSkill)
+                        @foreach (var UserSkill in Model.volunteersSkills)
                         {
                             <span class="badge badge-secondary skill-badge" data-skill-id="@UserSkill.skillId">
                                 @UserSkill.skillName
