--- a/Tabang-Hub/Tabang-Hub/Views/Organization/EventsManagement.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/EventsManagement.cshtml
@@ -103,7 +103,7 @@
         <div id="event-creation" class="mb-4 content-section">
             <div class="card-header">Event Creation</div>
             <div class="card-body">
-                <form action="/Organization/CreateEvents" method="post" enctype="multipart/form-data">
+                <form action="/Organization/CreateEvents" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
                     <div class="mb-3">
                         <label for="CreateEvents_eventTitle" class="form-label">Event Title</label>
                         <input type="text" class="form-control" id="CreateEvents_eventTitle" name="CreateEvents.eventTitle" placeholder="Enter event title">
@@ -183,9 +183,8 @@
                                     <td>@list.Total_Image</td>
                                     <td>@list.Total_Skills</td>
                                     <td>
-                                        <form action="@Url.Action("Delete", "Organization")" method="post" onsubmit="return confirm('Are you sure you want to delete this event?');">
-                                            <input type="hidden" name="eventId" value="@list.Event_Id" />
-                                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                                        <form class="delete-form" data-event-id="@list.Event_Id">
+                                            <button type="button" class="btn btn-sm btn-danger delete-button">Delete</button>
                                         </form>
                                     </td>
                                 </tr>
@@ -195,30 +194,6 @@
                 </div>
             </div>
         </div>
-
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                var rows = document.querySelectorAll('tr[data-href]');
-                rows.forEach(row => {
-                    row.addEventListener('click', function () {
-                        window.location.href = this.getAttribute('data-href');
-                    });
-                });
-
-                var deleteButtons = document.querySelectorAll('.btn-danger');
-                deleteButtons.forEach(button => {
-                    button.addEventListener('click', function (event) {
-                        event.stopPropagation();
-                    });
-                });
-            });
-        </script>
-
-
-
-
-
-
 
         <!-- Scheduling and Calendar -->
         <div id="scheduling-calendar" class="mb-4 content-section">
@@ -230,70 +205,164 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-    function showSection(sectionId) {
-        // Hide all sections
-        document.querySelectorAll('.content-section').forEach(section => {
-            section.classList.remove('active');
-        });
+    document.addEventListener('DOMContentLoaded', function () {
+    var deleteUrl = '@Url.Action("Delete", "Organization")';
 
-        // Show the selected section
-        document.getElementById(sectionId).classList.add('active');
+    var rows = document.querySelectorAll('tr[data-href]');
+    rows.forEach(row => {
+        row.addEventListener('click', function () {
+            window.location.href = this.getAttribute('data-href');
+        });
+    });
+
+    document.querySelectorAll('.delete-button').forEach(button => {
+        button.addEventListener('click', function (event) {
+            event.stopPropagation();  // Stop the click event from propagating to the row
+            var form = this.closest('.delete-form');
+            var eventId = form.getAttribute('data-event-id');
+
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Submit the form to delete the event
+                    var xhr = new XMLHttpRequest();
+                    xhr.open("POST", deleteUrl, true);
+                    xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+                    xhr.onload = function() {
+                        if (xhr.status === 200) {
+                            Swal.fire(
+                                'Deleted!',
+                                'Your event has been deleted.',
+                                'success'
+                            ).then(() => {
+                                location.reload();
+                            });
+                        } else {
+                            Swal.fire(
+                                'Error!',
+                                'There was an error deleting the event. Please try again.',
+                                'error'
+                            );
+                        }
+                    };
+                    xhr.send("eventId=" + eventId);
+                }
+            });
+        });
+    });
+});
+
+function showSection(sectionId) {
+    // Hide all sections
+    document.querySelectorAll('.content-section').forEach(section => {
+        section.classList.remove('active');
+    });
+
+    // Show the selected section
+    document.getElementById(sectionId).classList.add('active');
+}
+
+function validateForm() {
+    const allowedExtensions = ['jpg', 'jpeg', 'png', 'gif'];
+    const files = document.getElementById('CreateEvents_uploadImage').files;
+    const startDate = new Date(document.getElementById('CreateEvents_dateStart').value);
+    const endDate = new Date(document.getElementById('CreateEvents_dateEnd').value);
+    const now = new Date();
+
+    if (startDate < now) {
+        Swal.fire({
+            icon: 'error',
+            title: 'Invalid Start Date',
+            text: 'Start date and time cannot be before the current date and time.'
+        });
+        return false;
     }
 
-    function addSkill(skill) {
-        const addedSkillsContainer = document.getElementById('added-skills');
+    if (endDate < startDate) {
+        Swal.fire({
+            icon: 'error',
+            title: 'Invalid End Date',
+            text: 'End date and time cannot be before the start date and time.'
+        });
+        return false;
+    }
 
-        // Check if the skill is already added
-        if (Array.from(addedSkillsContainer.children).some(child => child.textContent.includes(skill))) {
-            return;
+    for (let i = 0; i < files.length; i++) {
+        const fileExtension = files[i].name.split('.').pop().toLowerCase();
+        if (!allowedExtensions.includes(fileExtension)) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Invalid File Type',
+                text: 'Invalid file type. Only JPG, JPEG, PNG, and GIF files are allowed.'
+            });
+            return false;
         }
+    }
+    return true;
+}
 
-        // Create skill tag
-        const skillTag = document.createElement('span');
-        skillTag.className = 'skill-tag btn btn-outline-secondary';
-        skillTag.textContent = skill;
+function addSkill(skill) {
+    const addedSkillsContainer = document.getElementById('added-skills');
 
-        // Create hidden input for the skill
-        const skillInput = document.createElement('input');
-        skillInput.type = 'hidden';
-        skillInput.name = 'Skills';
-        skillInput.value = skill;
+    // Check if the skill is already added
+    if (Array.from(addedSkillsContainer.children).some(child => child.textContent.includes(skill))) {
+        return;
+    }
 
-        // Append the hidden input and skill tag
-        skillTag.appendChild(skillInput);
+    // Create skill tag
+    const skillTag = document.createElement('span');
+    skillTag.className = 'skill-tag btn btn-outline-secondary';
+    skillTag.textContent = skill;
 
-        // Create remove button
-        const removeButton = document.createElement('span');
-        removeButton.className = 'remove-skill';
-        removeButton.textContent = ' x';
-        removeButton.onclick = function () {
-            removeSkill(skillTag);
+    // Create hidden input for the skill
+    const skillInput = document.createElement('input');
+    skillInput.type = 'hidden';
+    skillInput.name = 'Skills';
+    skillInput.value = skill;
+
+    // Append the hidden input and skill tag
+    skillTag.appendChild(skillInput);
+
+    // Create remove button
+    const removeButton = document.createElement('span');
+    removeButton.className = 'remove-skill';
+    removeButton.textContent = ' x';
+    removeButton.onclick = function () {
+        removeSkill(skillTag);
+    };
+
+    skillTag.appendChild(removeButton);
+    addedSkillsContainer.appendChild(skillTag);
+}
+
+function removeSkill(skillTag) {
+    const addedSkillsContainer = document.getElementById('added-skills');
+    addedSkillsContainer.removeChild(skillTag);
+}
+
+function previewImages() {
+    const previewContainer = document.getElementById('image-preview');
+    previewContainer.innerHTML = ''; // Clear previous previews
+    const files = document.getElementById('CreateEvents_uploadImage').files;
+
+    Array.from(files).forEach(file => {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+            const img = document.createElement('img');
+            img.src = e.target.result;
+            img.className = 'preview-image';
+            previewContainer.appendChild(img);
         };
-
-        skillTag.appendChild(removeButton);
-        addedSkillsContainer.appendChild(skillTag);
-    }
-
-    function removeSkill(skillTag) {
-        const addedSkillsContainer = document.getElementById('added-skills');
-        addedSkillsContainer.removeChild(skillTag);
-    }
-
-    function previewImages() {
-        const previewContainer = document.getElementById('image-preview');
-        previewContainer.innerHTML = ''; // Clear previous previews
-        const files = document.getElementById('CreateEvents_uploadImage').files;
-
-        Array.from(files).forEach(file => {
-            const reader = new FileReader();
-            reader.onload = function (e) {
-                const img = document.createElement('img');
-                img.src = e.target.result;
-                img.className = 'preview-image';
-                previewContainer.appendChild(img);
-            };
-            reader.readAsDataURL(file);
-        });
-    }
+        reader.readAsDataURL(file);
+    });
+}
 </script>
